--- a/recipes/KdialectSpeech/ASR/Conformer/hparams/conformer_medium.yaml
+++ b/recipes/KdialectSpeech/ASR/Conformer/hparams/conformer_medium.yaml
@@ -8,7 +8,7 @@
 # Authors: Jianyuan Zhong, Titouan Parcollet, Samuele Cornell, Dongwon Kim, Dongwoo Kim
 # ############################################################################
 # Seed needs to be set at top of yaml, before objects with parameters are made
-seed: 7774
+seed: 5555
 __set_seed: !apply:torch.manual_seed [!ref <seed>]
 
 province_code: gw #['gw', 'gs', 'jl', 'jj', 'cc']
@@ -22,10 +22,11 @@ tb_log: !ref <output_folder>/tb_log # tensorboard용 디렉토리
 # Language model (LM) pretraining
 # NB: To avoid mismatch, the speech recognizer must be trained with the same
 # tokenizer used for LM training.
-pretrained_lm_tokenizer_path: !ref ../../LM/results/Transformer/2222/<province_code>/save
+# pretrained_lm_tokenizer_path: !ref ../../LM/results/Transformer/2222/<province_code>/save
+pretrained_lm_tokenizer_path: !ref ../../Tokenizer/results/data_prepared/<province_code>
 
 # Data files
-data_folder: !ref ../../Tokenizer/results/5K_subword_unigram_LM/<province_code>
+data_folder: !ref ../../Tokenizer/results/data_prepared/<province_code>
 splited_wav_folder: same
 
 train_csv: !ref <data_folder>/train.csv
@@ -44,7 +45,7 @@ skip_prep: False
 # The global batch size is computed as batch_size * n_gpus * gradient_accumulation.
 # Empirically, we found that this value should be >= 128.
 # Please, set your parameters accordingly.
-number_of_epochs: 20
+number_of_epochs: 100
 batch_size: 32 # 32 This works for GPUs with 80GB
 ctc_weight: 0.3
 gradient_accumulation: 4
@@ -96,7 +97,7 @@ unk_index: 0
 # Decoding parameters
 min_decode_ratio: 0.0
 max_decode_ratio: 1.0
-valid_search_interval: 10 # 10
+valid_search_interval: 100 # 10
 valid_beam_size: 10
 test_beam_size: 60
 lm_weight: 0.20
@@ -266,8 +267,10 @@ acc_computer: !name:speechbrain.utils.Accuracy.AccuracyStats
 pretrainer: !new:speechbrain.utils.parameter_transfer.Pretrainer
     collect_in: !ref <save_folder>
     loadables:
-        lm: !ref <lm_model>
+        # lm: !ref <lm_model>
         tokenizer: !ref <tokenizer>
     paths:
-        lm: !ref <pretrained_lm_tokenizer_path>/lm.ckpt
-        tokenizer: !ref <pretrained_lm_tokenizer_path>/tokenizer.ckpt
+        # lm: !ref <pretrained_lm_tokenizer_path>/lm.ckpt
+        # tokenizer: !ref <pretrained_lm_tokenizer_path>/tokenizer.ckpt
+        tokenizer: !ref <pretrained_lm_tokenizer_path>/5000_unigram.model
+
