--- a/recipes/KdialectSpeech/Pipeline/run_pipe.yaml
+++ b/recipes/KdialectSpeech/Pipeline/run_pipe.yaml
@@ -5,22 +5,7 @@
 # - lm_model
 # - 초매개변수
 
-# run modules
-run_modules:
-    # - data_download
-    # - tokenizer
-    # - lm
-    - asr
-
-run_provinces:
-    - gw
-    - gs
-    - jl
-    # - jj
-    - cc
-
-gpu_num: 4
-
+### 0. common
 # pipe_log
 log_config: log-config.yaml
 log_file: log.txt
@@ -28,17 +13,43 @@ error_file_log: error_files.txt # wrong audio files
 wrong_samplerate_file: wrong_samplerate.txt # samplerate이 16000이 아닌 파일 목록
 
 # directory
-base_dir: ..
-tokenizer_dir: !ref <base_dir>/Tokenizer
-lm_dir: !ref <base_dir>/LM
-asr_dir: !ref <base_dir>/ASR/Conformer
+# base_dir: .. # asr의 base_dir과 중복되는 변수, 수정 검토 kdialect_base_dir
+# tokenizer_dir: !ref <base_dir>/Tokenizer
+# lm_dir: !ref <base_dir>/LM
+# asr_dir: !ref <base_dir>/ASR/Conformer
+
+kdialect_base_dir: ..
+tokenizer_dir: !ref <kdialect_base_dir>/Tokenizer
+lm_dir: !ref <kdialect_base_dir>/LM
+asr_dir: !ref <kdialect_base_dir>/ASR/Conformer
+
+# run modules
+run_modules:
+    # - data_download
+    - tokenizer
+    # - lm
+    - asr
+
+run_provinces:
+    # - gw
+    - gs
+    # - jl
+    # - jj
+    # - cc
+
+gpu_num: 4
+
+# 결과 모델 파일을 trained model dir로 복사 여부
+copy_trained_model: True
+pretrained_model_base: !ref <asr_dir>/Inference/pretrained-model-src
 
 
+### 1. Data download
 ### MTData data : naver cloud storage
 ### 접속 정보
 service_name: s3
 endpoint_url: https://kr.object.ncloudstorage.com
-storage_region_name: kr-standard
+# storage_region_name: kr-standard
 access_key: 7NYHGkci0LTg3EAqu67w
 secret_key: 01cS8pqm6q0f63cJoVsIdy3CodwBjhjPnzr113rL
 
@@ -47,7 +58,8 @@ max_keys: 1000
 
 data_save_path: /data/MTDATA/fn-2-018/root
 
-key_names:  
+# download 받은 디렉토리
+key_names:
     # - 1114Dataset_new
     # - 1115Dataset_new
     # - 1117Dataset_new
@@ -79,11 +91,19 @@ key_names:
     # - 1217Dataset
     # - 1218Dataset
     # - 1219Dataset
-    - 1220Dataset
-    - 1221Dataset
-
+    # - 1220Dataset
+    # - 1221Dataset
+    # - 1222Dataset
+    # - 1223Dataset    
+    # - 1224Dataset
+    # - 1227Dataset (12-28:10시 30분 진행)
+    # - 1226Dataset
+    # - 1227Dataset
+    - 1228Dataset
+    
 smaplerate: 16000
 
+### 2. Tokenizer
 tokenizer_dict: # provice_code : token_output: 5000
    gw: 5000
    gs: 5000
@@ -91,7 +111,6 @@ tokenizer_dict: # provice_code : token_output: 5000
    jj: 1000
    cc: 5000
 
-copy_trained_model: True
+### 3. LM(언어모델)
 
-pretrained_model_base: !ref <base_dir>/Inference/pretrained-model-src
-
+### 4. ASR(음성인식)
