--- a/recipes/KdialectSpeech/Tokenizer/hparams/5K_unigram_subword_bpe.yaml
+++ b/recipes/KdialectSpeech/Tokenizer/hparams/5K_unigram_subword_bpe.yaml
@@ -5,7 +5,7 @@
 #           N Park 2022
 # ############################################################################
 
-province_code: gw #['gw', 'gs', 'jl', 'jj', 'cc']
+province_code: gs #['gw', 'gs', 'jl', 'jj', 'cc']
 # output_folder: !ref results/5K_subword_unigram_LM/<province_code>
 output_folder: !ref results/data_prepared/<province_code>
 # train_log: !ref <output_folder>/train_log.txt
@@ -14,7 +14,7 @@ output_folder: !ref results/data_prepared/<province_code>
 
 # Data files
 ## skip_prep: False
-data_folder: !ref /data/MTDATA/fn-2-018/root # e.g., /path/to/KdialectSpeech
+data_folder: !ref /data/MTDATA/fn-2-018/starcell/root # e.g., /path/to/KdialectSpeech
 # splited_wav_folder: !ref <data_folder>/splited # 분리된 오디오 파일을 저장할 위치
 splited_wav_folder: same
 total_csv: !ref <output_folder>/total.csv
