--- a/recipes/KdialectSpeech/ASR/Conformer/hparams/conformer_medium.yaml
+++ b/recipes/KdialectSpeech/ASR/Conformer/hparams/conformer_medium.yaml
@@ -11,10 +11,10 @@
 seed: 5555
 __set_seed: !apply:torch.manual_seed [!ref <seed>]
 
-province_code: total #['gw', 'gs', 'jl', 'jj', 'cc']
+province_code: gs #['gw', 'gs', 'jl', 'jj', 'cc']
 
 output_folder: !ref results/Conformer/<seed>/<province_code>
-wer_file: !ref <output_folder>/wer.txt
+wer_file: !ref <output_folder>/swer_test.txt
 save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
 tb_log: !ref <output_folder>/tb_log # tensorboard용 디렉토리
@@ -24,7 +24,8 @@ tb_log: !ref <output_folder>/tb_log # tensorboard용 디렉토리
 # tokenizer used for LM training.
 # pretrained_lm_tokenizer_path: !ref ../../LM/results/Transformer/2222/<province_code>/save
 
-pretrained_lm_tokenizer_path: !ref ../../Tokenizer/results/data_prepared/<province_code>
+# pretrained_lm_tokenizer_path: !ref ../../Tokenizer/results/data_prepared/<province_code>
+pretrained_lm_tokenizer_path: !ref ../../Tokenizer/results/data_prepared/total
 # pretrained_lm_tokenizer_path: !ref ../../Tokenizer/results.데이터적을때-경상60까지수렴-1212/5K_subword_unigram_LM/<province_code>
 
 
@@ -49,7 +50,7 @@ skip_prep: False
 # The global batch size is computed as batch_size * n_gpus * gradient_accumulation.
 # Empirically, we found that this value should be >= 128.
 # Please, set your parameters accordingly.
-number_of_epochs: 100 # 100
+number_of_epochs: 110 # 100
 batch_size: 32 # 32 This works for GPUs with 80GB
 ctc_weight: 0.3
 gradient_accumulation: 4
