--- a/recipes/KdialectSpeech/ASR/Conformer/hparams/conformer_medium.yaml
+++ b/recipes/KdialectSpeech/ASR/Conformer/hparams/conformer_medium.yaml
@@ -11,7 +11,7 @@
 seed: 7774
 __set_seed: !apply:torch.manual_seed [!ref <seed>]
 
-province_code: jj #['gw', 'gs', 'jl', 'jj', 'cc']
+province_code: jj #['gw', 'gs', 'jl', 'jj', 'cc', 'total']
 
 output_folder: !ref results/Conformer/<seed>/<province_code>
 wer_file: !ref <output_folder>/swer_test.txt
@@ -50,7 +50,7 @@ skip_prep: False
 # The global batch size is computed as batch_size * n_gpus * gradient_accumulation.
 # Empirically, we found that this value should be >= 128.
 # Please, set your parameters accordingly.
-number_of_epochs: 10 # 100
+number_of_epochs: 30 # 100
 batch_size: 32 # 32 This works for GPUs with 80GB
 ctc_weight: 0.3
 gradient_accumulation: 4
