--- a/recipes/KdialectSpeech/Pipeline/run_pipe.yaml
+++ b/recipes/KdialectSpeech/Pipeline/run_pipe.yaml
@@ -156,10 +156,14 @@ key_names:
     # - 0213Dataset
     # - 0214Dataset
     # - 0215Dataset # 2023/02/15 저녁 다운로드 시작
-    - 0215Dataset # 2023/02/21 : 16082
-    - 0216Dataset
-    - 0218Dataset
-    - 0220Dataset
+    # - 0215Dataset # 2023/02/21 : 16082
+    # - 0216Dataset
+    # - 0218Dataset
+    # - 0220Dataset
+
+    # - 0222Dataset
+    # - 0223Dataset
+    # - 0225Dataset # 2023/02/26 : 68343
     
 smaplerate: 16000
 
